--- a/egui/Cargo.toml
+++ b/egui/Cargo.toml
@@ -25,14 +25,11 @@ all-features = true
 [dependencies]
 epaint = { version = "0.15.0", path = "../epaint", default-features = false }
 
+accesskit = "0.1.0"
 ahash = "0.7"
 nohash-hasher = "0.2"
 ron = { version = "0.7", optional = true }
 serde = { version = "1", features = ["derive", "rc"], optional = true }
-
-[dependencies.accesskit]
-git = "https://github.com/AccessKit/accesskit"
-branch = "egui-work"
 
 [features]
 default = ["default_fonts", "single_threaded"]
@@ -53,10 +50,10 @@ extra_asserts = ["epaint/extra_asserts"]
 mint = ["epaint/mint"]
 
 # enable persistence of memory (window positions etc).
-persistence = ["serde", "epaint/serialize", "ron"]
+persistence = ["serde", "epaint/serialize", "ron", "accesskit/serde"]
 
 # implement serde on most types.
-serialize = ["serde", "epaint/serialize"]
+serialize = ["serde", "epaint/serialize", "accesskit/serde"]
 
 # implement bytemuck on most types.
 convert_bytemuck = ["epaint/convert_bytemuck"]
