--- a/crates/egui-winit/Cargo.toml
+++ b/crates/egui-winit/Cargo.toml
@@ -62,7 +62,7 @@ winit = { version = "0.27.2", default-features = false }
 document-features = { version = "0.2", optional = true }
 
 # feature accesskit
-accesskit_winit = { version = "0.7.1", optional = true }
+accesskit_winit = { git = "https://github.com/AccessKit/accesskit", branch = "macos-basic-text", optional = true }
 
 puffin = { version = "0.14", optional = true }
 serde = { version = "1.0", optional = true, features = ["derive"] }
