--- a/crates/egui-winit/Cargo.toml
+++ b/crates/egui-winit/Cargo.toml
@@ -66,7 +66,7 @@ winit = { version = "0.29.4", default-features = false, features = ["rwh_05"] }
 #! ### Optional dependencies
 
 # feature accesskit
-accesskit_winit = { version = "0.16.0", optional = true }
+accesskit_winit = { git = "https://github.com/AccessKit/accesskit", branch = "unix2-prototype", optional = true }
 
 ## Enable this when generating docs.
 document-features = { version = "0.2", optional = true }
