Support AccessKit's new approach to lazy initialization

--- a/crates/egui/Cargo.toml
+++ b/crates/egui/Cargo.toml
@@ -87,7 +87,7 @@ ahash.workspace = true
 nohash-hasher.workspace = true
 
 #! ### Optional dependencies
-accesskit = { version = "0.12", optional = true }
+accesskit = { git = "https://github.com/AccessKit/accesskit.git", branch = "new-lazy-init", optional = true }
 
 backtrace = { workspace = true, optional = true }
 
