Use the AccessKit main branch as we do final testing before doing an AccessKit release

--- a/crates/egui-winit/Cargo.toml
+++ b/crates/egui-winit/Cargo.toml
@@ -64,7 +64,7 @@ winit = { workspace = true, default-features = false, features = ["rwh_06"] }
 #! ### Optional dependencies
 
 # feature accesskit
-accesskit_winit = { git = "https://github.com/AccessKit/accesskit.git", branch = "new-lazy-init", optional = true }
+accesskit_winit = { git = "https://github.com/AccessKit/accesskit.git", optional = true }
 
 ## Enable this when generating docs.
 document-features = { workspace = true, optional = true }
