--- a/crates/egui-winit/Cargo.toml
+++ b/crates/egui-winit/Cargo.toml
@@ -67,7 +67,7 @@ winit = { workspace = true, default-features = false, features = ["rwh_06"] }
 #! ### Optional dependencies
 
 # feature accesskit
-accesskit_winit = { version = "0.16.0", optional = true }
+accesskit_winit = { git = "https://github.com/AccessKit/accesskit.git", branch = "winit-0.29-backport", optional = true }
 
 ## Enable this when generating docs.
 document-features = { workspace = true, optional = true }
